<resources>
    <string name="app_name">BetterUs_Tutorial</string>
    <string name="yourHealth">Your Health</string>
    <string name="continue_">Continue</string>
    <string name="previous">Previous</string>
    <string name="age">Age:</string>
    <string name="bioSex">Biological Sex:</string>
    <string name="weight">Weight:</string>
    <string name="height">Height:</string>
    <string name="years">20 yrs.</string>
    <string name="pounds">160 lb.</string>
    <string name="inches">75 in.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signUpNow">Sign up now</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="betterUsTitle">BetterUs</string>
    <string name="started">Let\'s Get Started!</string>
    <string name="tutorialBeginInfo">Before we start, let\'s get some basic info from you. The following pages
        will ask for some basic info regarding your health and activities. Remember to input honestly for accurate
        recommendations.
    </string>
    <string name="sleepTime">Sleep Time</string>
    <string name="wakeUpTime">Wake Up Time:</string>
    <string name="sleepTimeText">Sleep Time:</string>
    <string name="ten">10</string>
    <string name="twelve">12</string>
    <string name="meditation">Meditation</string>
    <string name="activity1Title">Activity 1</string>
    <string name="activity2Title">Activity 2</string>
    <string name="activity3Title">Activity 3</string>
    <string name="activity1Text">Activity 1:</string>
    <string name="activity2Text">Activity 2:</string>
    <string name="activity3Text">Activity 3:</string>
    <string name="editActivity1">Edit Activity 1</string>
    <string name="editActivity2">Edit Activity 2</string>
    <string name="editActivity3">Edit Activity 3</string>
    <string name="mindfulWalking">Mindful Walking</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="activityTimeText">Activity Time:</string>
    <string name="activityNameText">Activity Name:</string>
    <string name="activityTitle">Activity %d</string>
    <string name="duration">Duration:</string>
    <string name="twelveDays">12 days</string>
    <string name="exercises">Physical Exercises</string>
    <string name="food">Food</string>
    <string name="finishedTutorialTitle">You\'re All Set!</string>
    <string name="finishedTutorialInfo">You\'re all set, you may now use the app for a better you!</string>
    <string name="calPerHour">Cal. Per Hour: </string>
    <string name="calPerHourEx">250 cal.</string>
    <string name="dailyGoals">Your Daily Goals</string>
    <string name="caloriesBurnt">Calories Burnt:</string>
    <string name="caloriesGained">Calories Gained:</string>
    <string name="numMeditationActivities"># Med. Activities:</string>
    <string name="numExerciseActivities"># Exer. Activities:</string>
    <string name="three">3</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activitySelect">Activity:</string>
    <string name="caloriesBurned">Calories Burned:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="calories">Calories:</string>
    <string name="heartRateCheck">Let\'s check your heart rate!</string>
    <string name="heartRateGood">Your heart rate looks good!</string>
    <string name="heartRateBad">Your heart rate is abnormally high, seek professional opinion!</string>
    <string name="recommendation">Recommendation</string>
    <string name="recommend">Recommend</string>
    <string name="home">Home</string>
    <string name="activities">Activities</string>
    <string name="settings">Settings</string>
    <string name="exerciseActivities">Exercise Activities</string>
    <string name="meditationActivities">Meditation Activities</string>
    <string name="dailyGoalsSettings">Daily Goals</string>
    <string name="health">Health</string>
    <string name="sleep">Sleep</string>
    <string name="meal">Meal: </string>
    <string name="yourFood">Your Food</string>
    <string name="eatButtonText">This Is What I Ate</string>
    <string name="recommendText">Get recommendation</string>
    <string name="medText">Meditation:</string>
    <string name="exerText">Exercise:</string>
</resources>
