<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="380dp"
    android:layout_height="400dp"
    android:layout_gravity="center"
    android:background="@drawable/pop_up_edit_activity"
    >

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Activity #"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
    />

    <TextView
        android:id="@+id/activityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityNameText"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@+id/activityTitle"
        android:layout_marginTop="30dp"
        android:layout_marginStart="35dp"
    />

    <EditText
        android:id="@+id/activityNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/mindfulWalking"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_below="@+id/activityTitle"
        android:layout_marginStart="175dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:maxLength="100"
    />

    <TextView
        android:id="@+id/activityTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activityTimeText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/activityTitle"
        android:layout_marginTop="80dp"
        android:layout_marginStart="35dp"
    />

    <EditText
        android:id="@+id/activityTimeInput"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityTitle"
        android:hint="@string/ten"
        android:textSize="20sp"
        android:layout_marginStart="175dp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:inputType="number"
        android:singleLine="true"
        android:gravity="center"
        android:maxLength="2"
    />

    <Spinner
        android:id="@+id/activityAmPm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityTitle"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="225dp"
        android:layout_marginTop="83dp"
    />

    <TextView
        android:id="@+id/numDaysText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/activityTitle"
        android:layout_marginTop="130dp"
        android:layout_marginStart="35dp"
    />

    <EditText
        android:id="@+id/durationInput"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activityTitle"
        android:hint="@string/twelveDays"
        android:textSize="20sp"
        android:layout_marginStart="175dp"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        android:inputType="number"
        android:singleLine="true"
        android:gravity="center"
        android:maxLength="20"
    />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="72dp"
        android:paddingRight="72dp"
        android:background="@drawable/button_soft_enabled"
        android:layout_marginStart="20dp"
        android:text="@string/submit"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="230dp"
    />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="74dp"
        android:paddingRight="74dp"
        android:background="@drawable/button_soft_disabled"
        android:layout_marginStart="20dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/button_disabled_text"
        android:layout_marginTop="285dp"
    />
</RelativeLayout>