<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tutorial_1"
    android:background="@color/tutorial_page_background"
    >

    <ImageView
        android:id="@+id/blueBlob"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/blue_blob"
        android:layout_centerHorizontal="true"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/gifRoundCard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="160dp"
        app:cardCornerRadius="10dp"
        >

        <ImageView
            android:id="@+id/gifImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/medicine"
    />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourHealth"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:layout_below="@+id/blueBlob"
    />

    <TextView
        android:id="@+id/ageInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="115dp"
    />

    <EditText
        android:id="@+id/ageInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/years"
        android:textSize="20sp"
        android:layout_marginStart="260dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:singleLine="true"
    />

    <TextView
        android:id="@+id/weightInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_marginTop="60dp"
        android:layout_marginStart="115dp"
    />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/pounds"
        android:textSize="20sp"
        android:layout_marginStart="260dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:inputType="numberDecimal"
        android:singleLine="true"
    />

    <TextView
        android:id="@+id/heightInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_marginTop="100dp"
        android:layout_marginStart="115dp"
    />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/inches"
        android:textSize="20sp"
        android:layout_marginStart="260dp"
        android:textStyle="bold"
        android:layout_marginTop="90dp"
        android:inputType="numberDecimal"
        android:singleLine="true"
    />

    <TextView
        android:id="@+id/sexInputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bioSex"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_marginTop="140dp"
        android:layout_marginStart="115dp"
    />

    <Spinner
        android:id="@+id/sexInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="260dp"
        android:layout_marginTop="140dp"
    />

<!--    <Button-->
<!--        android:id="@+id/prevButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:paddingLeft="72dp"-->
<!--        android:paddingRight="72dp"-->
<!--        android:background="@drawable/button_soft_enabled_2"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:text="@string/previous"-->
<!--        android:textSize="20sp"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:layout_marginTop="545dp"-->
<!--    />-->

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:background="@drawable/button_soft_disabled"
        android:layout_marginStart="20dp"
        android:text="@string/continue_"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/button_disabled_text"
        android:layout_marginTop="600dp"
    />
</RelativeLayout>