<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tutorial.Tutorial_2"
    android:background="@color/tutorial_page_background"
    >

    <ImageView
        android:id="@+id/blueBlob"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/blue_blob"
        android:layout_centerHorizontal="true"
    />

    <androidx.cardview.widget.CardView
        android:id="@+id/gifRoundCard"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="160dp"
        app:cardCornerRadius="10dp"
        >

        <ImageView
            android:id="@+id/gifImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/sleep"
        />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleepTime"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:layout_below="@+id/blueBlob"
    />

    <TextView
        android:id="@+id/wakeUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wakeUpTime"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="55dp"
    />

    <EditText
        android:id="@+id/wakeUpInput"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/ten"
        android:textSize="20sp"
        android:layout_marginStart="200dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:singleLine="true"
        android:gravity="center"
        android:maxLength="2"
    />

    <Spinner
        android:id="@+id/wakeUpAmPm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="253dp"
        android:layout_marginTop="20dp"
    />

    <TextView
        android:id="@+id/sleepTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sleepTimeText"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_marginTop="60dp"
        android:layout_marginStart="55dp"
    />

    <EditText
        android:id="@+id/sleepTimeInput"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/twelve"
        android:textSize="20sp"
        android:layout_marginStart="200dp"
        android:textStyle="bold"
        android:layout_marginTop="50dp"
        android:inputType="number"
        android:singleLine="true"
        android:gravity="center"
        android:maxLength="2"
    />

    <Spinner
        android:id="@+id/sleepTimeAmPm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="253dp"
        android:layout_marginTop="60dp"
    />

    <Button
        android:id="@+id/previousButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="72dp"
        android:paddingRight="72dp"
        android:background="@drawable/button_soft_enabled_2"
        android:layout_marginStart="20dp"
        android:text="@string/previous"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="545dp"
    />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:background="@drawable/button_soft_disabled"
        android:layout_marginStart="20dp"
        android:text="@string/continue_"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="@color/button_disabled_text"
        android:layout_marginTop="600dp"
    />
</RelativeLayout>